# ultracode

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: binarize.rs
src/: api.rs  binarize.rs  compat.rs  lib.rs  prelude.rs
src/core/: mod.rs  types.rs
src/one_d/: code128.rs  ean13.rs  mod.rs
src/qr/: bytes.rs  data.rs  encode.rs  finder.rs  format.rs  mod.rs  rs.rs  sample.rs
tests/: integration_smoke.rs
