[package]
name = "ultracode"
version = "0.1.0"
edition = "2021"
description = "Быстрый и минималистичный декодер штрих-кодов: EAN-13/UPC-A и Code128 (+ утилиты для QR Format). В комплекте демо-бинари и синтетическая генерация."
readme = "README.md"
license = "MIT"
keywords = ["barcode", "ean13", "upc-a", "code128", "qrcode", "decoder"]
categories = ["multimedia::images", "algorithms", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[dependencies]

[[bin]]
name = "scan_synthetic"
path = "src/bin/scan_synthetic.rs"

[[bin]]
name = "scan_pgm"
path = "src/bin/scan_pgm.rs"

[[bin]]
name = "scan_code128_synth"
path = "src/bin/scan_code128_synth.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
criterion = "0.5"
